# starter-kit

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .release-please-manifest.json  .starter-kit-files  .trivyignore  CLAUDE.md  Makefile  README.md  release-please-config.json
.claude/: settings.json
.claude/agents/: build-validator.md  code-architect.md  code-simplifier.md  integration-verifier.md  linkedin-style-editor.md  oncall-guide.md  prd-product-reviewer.md  prd-risk-analyst.md  prd-technical-reviewer.md  staff-engineer.md  verify-app.md
.claude/commands/: arch-check.md  build-validator.md  code-architect.md  code-simplifier.md  debug.md  doc-check.md  feature.md  linkedin-review.md  oncall-guide.md  plan-and-review.md  prd.md  pre-plan-prompt.md  preflight-check.md  refactor.md  staff-engineer.md  verify-acceptance.md  verify-app.md  verify-integration.md  verify-loop.md
.claude/hooks/: sync-plan-to-docs.sh  typecheck-frontend.sh
.claude/rules/: api.md  build-errors.md  naming.md  security.md  ui.md  workflow.md
.claude/skills/deploy-setup/: SKILL.md
.claude/skills/design-system/: SKILL.md
.claude/skills/front-end-design/: SKILL.md
.claude/skills/mobile-friendly-design/: SKILL.md
.claude/skills/plan-review-workflow/: SKILL.md
.claude/skills/prd-workflow/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/security-code-scan/: SKILL.md
.claude/skills/security-config-scan/: SKILL.md
.claude/skills/security-deps-scan/: SKILL.md
.claude/skills/security-exposure-scan/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/staff-engineer-review/: SKILL.md
.claude/skills/ui-component-creator/: SKILL.md
.claude/skills/website-to-design-system/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  release.yml  security.yml
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.caddy  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/features/health/: router.py  service.py
backend/features/items/: repository.py  router.py  schema.py  service.py
backend/shared/: config.py
backend/shared/auth/: dependencies.py
backend/shared/db/: base.py  engine.py  session.py
backend/shared/db/migrations/: env.py
backend/shared/db/migrations/versions/: 0001_create_items_table.py
backend/shared/db/models/: item.py
backend/shared/lib/: exceptions.py
backend/shared/middleware/: cors.py  logging.py  rate_limit.py
backend/tests/: conftest.py
backend/tests/features/health/: test_router.py
backend/tests/features/items/: test_repository.py  test_router.py  test_service.py
backend/tests/shared/: test_config.py
docs/: README.md  project-documentation-guide.md  starter-kit-guide.md
docs/architecture/adr/: 0001-frontend-tech-stack.md  0002-backend-tech-stack.md  0003-versioning-and-release-strategy.md  0004-repository-security-and-pre-commit.md  0005-cicd-pipeline-architecture.md  0006-deployment-strategy.md  (+4 more)
docs/planning/: todo.md
docs/research/: _template.md
docs/workflows/: _template.md  cicd-setup.md  database-backup.md  dependency-management.md  disaster-recovery.md  environment-setup.md  upstream-sync.md
frontend/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.mts
frontend/public/: robots.txt
frontend/src/: instrumentation.ts
scripts/: backup.sh  claude-batch-task.sh  claude-start-servers.sh  init-project.sh  restore.sh  scaffold-feature.sh  start-dev.sh  sync-upstream.sh
scripts/hooks/: check_env_sync.py
(+64 files in other folders)
