[project]
name = "aipoweredmakers-backend"
version = "0.1.0"
description = "AIpoweredMakers Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "shared*", "features*"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint.isort]
known-first-party = ["app", "features", "shared"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "B008",  # Depends() in function defaults — FastAPI standard pattern
    "N818",  # Exception naming — AppException is clearer than AppError for domain exceptions
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
